Bug 489009 - Hide Cursor doesn't recognize moving cursor with a graphic tablet as a mouse movement
Summary: Hide Cursor doesn't recognize moving cursor with a graphic tablet as a mouse ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.1.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 490062 490110 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-06-22 21:01 UTC by Bartosz
Modified: 2024-09-13 14:37 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bartosz 2024-06-22 21:01:11 UTC
When Hide Cursor in Desktop Effects is turned on, after defined inactivity time cursor disappears and doesn't show up when using a graphic tablet. Mouse needs to be used to show the cursor again which makes it impossible to draw in graphical programs.

STEPS TO REPRODUCE
1. Plug graphic tablet
2. Turn on Hide Cursor
3. Wait 5 seconds for the cursor to disappear (default inactivity time)

OBSERVED RESULT
Can't see the cursor when using graphic tablet. Moving cursor with a graphic tablet doesn't toggle cursor visibility back again. 

EXPECTED RESULT
Moving the cursor with a graphic tablet should be treated as a mouse movement and toggle cursor visibility back again.

SOFTWARE/OS VERSIONS
Linux: 6.9.5-arch1-1
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.1
Wayland
Comment 1 Bug Janitor Service 2024-06-27 10:38:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6003
Comment 2 Zamundaaa 2024-06-27 10:49:58 UTC
Git commit ad8c947134606a92d235e3304cdf4015caf378ea by Xaver Hugl.
Committed on 27/06/2024 at 10:38.
Pushed by zamundaaa into branch 'master'.

plugins/hidecursor: show the cursor on tablet events

M  +8    -0    src/plugins/hidecursor/hidecursor.cpp
M  +1    -0    src/plugins/hidecursor/hidecursor.h

https://invent.kde.org/plasma/kwin/-/commit/ad8c947134606a92d235e3304cdf4015caf378ea
Comment 3 Zamundaaa 2024-06-27 11:27:16 UTC
Git commit d95dd8f98fc7a3d49f30e191d939b29bfd7a8250 by Xaver Hugl.
Committed on 27/06/2024 at 11:17.
Pushed by zamundaaa into branch 'Plasma/6.1'.

plugins/hidecursor: show the cursor on tablet events


(cherry picked from commit ad8c947134606a92d235e3304cdf4015caf378ea)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +8    -0    src/plugins/hidecursor/hidecursor.cpp
M  +1    -0    src/plugins/hidecursor/hidecursor.h

https://invent.kde.org/plasma/kwin/-/commit/d95dd8f98fc7a3d49f30e191d939b29bfd7a8250
Comment 4 Vlad Zahorodnii 2024-07-15 09:56:44 UTC
*** Bug 490110 has been marked as a duplicate of this bug. ***
Comment 5 cwo 2024-09-13 14:37:00 UTC
*** Bug 490062 has been marked as a duplicate of this bug. ***