plugins/hidecursor: show the cursor on tablet events

BUG: 489009